--- a/pom.xml
+++ b/pom.xml
@@ -37,8 +37,7 @@
 				<groupId>org.javaee7</groupId>
 				<artifactId>util-samples</artifactId>
 				<version>1.0-SNAPSHOT</version>
-				<type>jar</type>
-				<scope>test</scope>
+				<!--scope>compile</scope-->
 			</dependency>
 		</dependencies>
 	</dependencyManagement>
@@ -336,30 +335,6 @@
 			<id>wildfly-remote-arquillian</id>
 			<dependencies>
 				<dependency>
-					<groupId>io.undertow</groupId>
-					<artifactId>undertow-websockets-jsr</artifactId>
-					<version>1.0.0.Beta25</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.jboss.resteasy</groupId>
-					<artifactId>resteasy-client</artifactId>
-					<version>3.0.5.Final</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.jboss.resteasy</groupId>
-					<artifactId>resteasy-jaxb-provider</artifactId>
-					<version>3.0.5.Final</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
-					<groupId>org.jboss.resteasy</groupId>
-					<artifactId>resteasy-json-p-provider</artifactId>
-					<version>3.0.5.Final</version>
-					<scope>test</scope>
-				</dependency>
-				<dependency>
 					<groupId>org.wildfly</groupId>
 					<artifactId>wildfly-arquillian-container-remote</artifactId>
 					<version>${org.wildfly}</version>
@@ -367,13 +342,15 @@
 				</dependency>
 			</dependencies>
 			<build>
-				<testResources>
-					<testResource>
-						<directory>src/test/resources</directory>
-						<filtering>true</filtering>
-					</testResource>
-				</testResources>
 				<plugins>
+					<plugin>
+						<artifactId>maven-surefire-plugin</artifactId>
+						<configuration>
+							<skipTests>false</skipTests>
+							<parallel>none</parallel>
+						</configuration>
+						<version>2.16</version>
+					</plugin>
 				</plugins>
 			</build>
 		</profile>
