--- a/servlet/event-listeners/pom.xml
+++ b/servlet/event-listeners/pom.xml
@@ -12,4 +12,11 @@
     <artifactId>event-listeners</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
+    
+   	<dependencies>
+		<dependency>
+			<groupId>org.javaee7</groupId>
+			<artifactId>util-samples</artifactId>
+		</dependency>
+	</dependencies>
 </project>
