--- a/jsf/cd-integration/pom.xml
+++ b/jsf/cd-integration/pom.xml
@@ -9,7 +9,7 @@
     </parent>
 
     <groupId>org.javaee7.jsf</groupId>
-    <artifactId>jsf-listeners</artifactId>
+    <artifactId>cdi-integration</artifactId>
     <version>1.0-SNAPSHOT</version>
     <packaging>war</packaging>
 </project>
